@@ -7,6 +7,7 @@ Changes for 1.9
 
 Changes for 1.8.3rc3
 
+ - [ZBX-2766] fixed triggers info in status of triggers page in fullscreen mode (Aly)
  - [ZBX-2799] fixed map element host in maintenance (Aly)
  - [ZBX-2781] fixed timeline in case of usertime goes over possible period (Aly)
  - [ZBX-2803] fixed agent compilation on HP-UX with the native HP-UX C compiler (asaveljevs)
